frontend/src/_styles/theme.scss
/* ... */
.create-new-table-btn {
  width: 248px;

  button {
    height: 40px !important;

  }
}

.tooljet-database-sidebar {
  max-width: 288px;
  background: var(--base);
  border-right: 1px solid var(--slate5);


  .sidebar-container {
    height: 40px !important;
    padding-top: 1px !important;
    margin: 0 auto;
    display: flex;
    justify-content: center;
  }
}

.create-new-app-dropdown {
  width: 248px !important;

  .dropdown-toggle-split {
    border-left: 1px solid var(--indigo11) !important;
  }

  button {
    background-color: var(--indigo9) !important;
  }
}

.create-new-app-button {
  font-weight: 500;
  font-size: 14px;
  height: 40px;
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
}

.create-new-app-button+.dropdown-toggle {
  height: 40px;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
}

.custom-select {
  .select-search-dark__value::after {
    content: none;
  }

  .select-search-dark__select,
  .select-search__select {
    min-width: fit-content;
    max-width: 100% !important;
  }
}

.jet-data-table td .textarea-dark-theme.text-container:focus {
  background-color: transparent !important;
}

.tooljet-logo-loader {
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;

  .loader-spinner {
    margin: 10px 87px;
  }
}

.page-body {
  height: calc(100vh - 1.25rem - 48px);
  min-height: 500px;
}

// buttons
.default-secondary-button {
  background-color: $color-light-indigo-03;
  color: $color-light-indigo-09;
  max-height: 28px;
  width: 76px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 4px 16px;
  gap: 6px;
  font-weight: 500;
  border: 0 !important;

  .query-manager-btn-svg-wrapper {
    width: 16px !important;
    height: 16px !important;
    padding: 2.67px;
  }

  .query-manager-btn-name {
    min-width: 22px;
  }

  &:hover {
    background-color: $color-light-indigo-04;
    color: $color-light-indigo-10;
  }

  &:active {
    background-color: $color-light-indigo-04;
    color: $color-light-indigo-10;
    box-shadow: 0px 0px 0px 4px #C6D4F9;
    border-radius: 6px;
    border: 1px solid;
    outline: 0 !important;

    svg {
      path {
        fill: $color-light-indigo-10;
      }
    }
  }

  .query-run-svg {
    padding: 4px 2.67px;
  }
}

.default-secondary-button.theme-dark {
  background-color: #4D72FA !important;
  color: #F4F6FA !important;

  svg {
    path {
      fill: #F4F6FA !important;
    }
  }

  &:hover {
    border: 1px solid #4D72FA !important;
    background-color: #4D5EF0 !important;
    color: #FFFFFC !important;

    svg {
      path {
        fill: #FFFFFC !important;
      }
    }
  }

  &:active {
    border: 1px solid #4D72FA !important;
    background-color: #4D5EF0 !important;
    box-shadow: 0px 0px 0px 4px #4D72FA;
    border-radius: 6px;
  }
}

.default-tertiary-button {
  background-color: $color-light-base;
  color: $color-light-slate-12;
  border: 1px solid $color-light-slate-07;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 4px 16px;
  gap: 6px;
  max-height: 28px;
  font-weight: 500;
  height: 28px;
  cursor: pointer;

  .query-btn-svg-wrapper {
    width: 16px !important;
    height: 16px !important;
    padding: 2.67px;
  }

  .query-btn-name {
    min-width: 22px;

  }

  &:hover {
    border: 1px solid $color-light-slate-08;
    color: $color-light-slate-11;

    svg {
      path {
        fill: $color-light-slate-11;
      }
    }
  }

  .query-create-run-svg {
    padding: 2px;
  }

  .query-preview-svg {
    padding: 2.67px 0.067px;
  }

  &:active {
    border: 1px solid #C1C8CD;
    box-shadow: 0px 0px 0px 4px #DFE3E6;
    color: $color-light-slate-11;
    outline: 0;
  }
}

.default-tertiary-button.theme-dark {
  background-color: transparent;
  color: #4D5EF0 !important;
  border: 1px solid #4D5EF0 !important;

  svg {
    path {
      fill: #4D5EF0 !important;
    }
  }

  &:hover {
    border: 1px solid $color-dark-slate-08;
    color: #FFFFFC !important;
    background-color: #4D5EF0 !important;

    svg {
      path {
        fill: #FFFFFC !important;
      }
    }
  }

  &:active {
    border: 1px solid inherit;
    box-shadow: none;
    outline: 0;
  }
}

.default-tertiary-button.theme-dark.btn-loading {
  background-color: #4D5EF0 !important;
  color: transparent !important;

  svg {
    path {
      fill: transparent !important;
    }
  }
}

.default-tertiary-button.button-loading {
  background-color: transparent !important;
  color: transparent !important;

  svg {
    path {
      fill: transparent !important;
    }
  }
}

.disable-tertiary-button {
  color: $color-light-slate-08;
  background-color: $color-light-slate-03;
  pointer-events: none !important;

  svg {
    path {
      fill: $color-light-slate-08;
    }
  }

}

.disable-tertiary-button.theme-dark {
  color: $color-dark-slate-08;
  background-color: $color-dark-slate-03;
  pointer-events: none !important;

  svg {
    path {
      fill: $color-dark-slate-08;
    }
  }
}

.font-weight-500 {
  font-weight: 500;
}

.font-size-12 {
  font-size: 12px;
}

.toggle-query-editor-svg {
  width: 16px;
  height: 16px;
  padding: 2.88px 5.22px;
}

.theme-dark {
  .org-avatar:hover {
    .avatar {
      background: #10141A no-repeat center/cover;
    }
  }
}

.app-creation-time {
  color: var(--slate11) !important;
}

.font-weight-400 {
  font-weight: 400;
}

.border-indigo-09 {
  border: 1px solid $color-light-indigo-09;
}

.dark-theme-toggle-btn {
  height: 32px;
  display: flex;
  align-items: center;
  justify-content: center;

}

.dark-theme-toggle-btn-text {
  font-size: 14px;
  margin: 12px;
}

.maximum-canvas-height-input-field {
  width: 90px;
}

.layout-header {
  position: fixed;
  right: 0;
  left: 56px;
  z-index: 1;
  background: var(--base);
  height: 64px;
}
/* ... */

