fix :: overflow issue in app card time

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -7346,6 +7346,9 @@ tbody {
 
 .app-creation-time {
   color: var(--slate11) !important;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .font-weight-400 {
